# amebo

./: .dockerignore  .env  .env.example  .env.production  .gitignore  ASSUMPTIONS.md  DOCKER_CLUSTER_README.md  Dockerfile  MANIFEST.in  README.md  TODO.md  amebo.json  amebo.py  amebo.sh  amebo_readers.py  api.http  build-docs.sh  cli.py  constants.py  controllers.py  docker-compose.monitoring.yml  docker-compose.yml  handlers.py  health-check.sh  hooks.py  init-db.sql  libx.py  middleware.py  mkdocs.yml  models.py  nginx.conf  play.py  pyproject.toml  r.dev.txt  r.docs.txt  router.py  sample-amebo.json  scripts.py  settings.py  setup.py  (+5 more)
.github/workflows/: docs.yml  publish.yml
amebo/: __init__.py  amebo.env  amebo.sh  amebo_readers.py  amebo_writers.py  aproko.py  engines.py  entities.py  handlers.py  main.py  router.py
amebo/constants/: literals.py  scripts.py
amebo/controllers/: actions.py  app.py  applications.py  events.py  gists.py  microservices.py  producers.py  subscribers.py  subscriptions.py  xui.py
amebo/database/: pg.py
amebo/decorators/: formatters.py  providers.py  security.py
amebo/libs/: __init__.py  decorators.py
amebo/middlewares/: database.py  security.py  setup.py
amebo/models/: actions.py  applications.py  events.py  (+4 more)
controllers/: actions.py  events.py  gists.py  microservices.py  subscribers.py
decorators/: formatters.py  providers.py
docs/: abc.py  index.md
engines/: amoeba.py  pubsub.py
middlewares/: database.py  security.py
models/: actions.py  events.py  subscribers.py
monitoring/: prometheus.yml
public/: heaven.css
templates/: abase.axml  actions.axml  actions.html  events.html  functions.axml  login.html  microservices.html  subscribers.html
tests/: .py  amebo.http
utils/: helpers.py
(+49 files in other folders)
