[tool.poetry]
name = "amebo"
version = "0.2.0"
description = "HTTP Event Notifications Server - Asynchronous Communication Engine"
authors = ["Tersoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "0.23.3"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
orjson = "3.8.9"
pydantic = "1.10.7"
pyjwt = "2.7.0"
uvicorn = "0.14.0"
routerling = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
amebo = "router:router"
