[tool.poetry]
name = "amebo"
version = "0.5.2"
description = "HTTP Event Notifications Server - Asynchronous Communication Engine"
authors = ["Tersoo"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "amebo"},
]

[tool.poetry.dependencies]
asyncpg = "^0"
python = "^3"
httpx = "^0"
jinja2 = "^3"
fastjsonschema = "^2.19.1"
orjson = "^3"
pydantic = "^2"
pyjwt = "^2"
uvicorn = "^0"
heaven = "^0"
python-dotenv = "^1"
redis = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
amebo = "amebo:execute"
